K8S/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lms-app
  namespace: teamtwo-namespace
spec:
  selector:
    app: lms-app
  ports:
  - name: http
    port: 5000
    targetPort: 5000
  type: LoadBalancer
